# my-gtk-app

./: .gitignore  Cargo.toml  build.rs
resources/: resources.gresource.xml
resources/ui/: main-window.ui  receipt-edit-window.ui
resources/ui/receipttableview/: receipttableviewitem_datetime.ui  receipttableviewitem_id.ui
src/: currency.rs  dal.rs  main.rs  receiptlistitem.rs  receiptliststore.rs  sqllistentity.rs  sqlliststore.rs  ui.rs
src/dal/: receiptdataaccessor.rs  testdatagenerator.rs
src/database/: incomeliststore.rs  mod.rs  prelude.rs  receiptlistitem.rs  receiptliststore.rs  sqldataaccessor.rs  sqlentity.rs  sqlliststore.rs  sqlliststoreworker.rs  testdatagenerator.rs
src/entities/: mod.rs
src/ui/: mainwindow.rs  receiptcolumnview.rs  receipteditwindow.rs
tests/: testcurrency.rs
