[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
gtk = { version = "0.6.4", package = "gtk4" }
once_cell = "1.17.1"
rand = "0.8.5"
rusqlite = "0.29.0"

[build-dependencies]
glib-build-tools = "0.17.0"
