[package]
name = "my-gtk-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/testcurrency.rs"

[dependencies]
chrono = "0.4.24"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"]}
num-format = "0.4.4"
once_cell = "1.17.1"
rand = "0.8.5"
rusqlite = "0.29.0"
trybuild = "1.0.80"

[build-dependencies]
glib-build-tools = "0.17.0"
